test/error/parse/ExpectProcedure.mod
MODULE ExpectProcedure;
PROCEDURE ;
END ExpectProcedure.
